--- a/ansible/roles/apache-config/templates/justus-backend.conf.j2
+++ b/ansible/roles/apache-config/templates/justus-backend.conf.j2
@@ -17,8 +17,8 @@ Alias "/api" "/opt/justus-backend"
     </Limit>
   </Directory>
      <Location /nodejs>
-      ProxyPass http://10.10.10.10:3000
-      ProxyPassReverse http://10.10.10.10:3000
+      ProxyPass http://localhost:3000
+      ProxyPassReverse http://localhost:3000
    </Location>
 </VirtualHost>
 
