--- a/ansible/roles/apache-config/templates/justus-backend.conf.j2
+++ b/ansible/roles/apache-config/templates/justus-backend.conf.j2
@@ -16,7 +16,7 @@ Alias "/api" "/opt/justus-backend"
       AllowOverride None
     </Limit>
   </Directory>
-     <Location />
+     <Location /api>
       ProxyPass http://localhost:3000
       ProxyPassReverse http://localhost:3000
    </Location>
