Enable possibility to test logged-in users

--- a/ansible/roles/apache/templates/justus-backend.conf.j2
+++ b/ansible/roles/apache/templates/justus-backend.conf.j2
@@ -1,27 +1,24 @@
 ServerName localhost
 Listen 8080
-DocumentRoot "/opt/justus-backend"
-Alias "/api" "/opt/justus-backend"
-
 <VirtualHost *:8080>
   ServerName localhost
-
   ErrorLog /var/log/httpd/justus-backend.log
-
-  <Directory "/opt/justus-backend">
-    <Limit GET HEAD POST PUT DELETE OPTIONS>
-      Require all granted
-      Header set Access-Control-Allow-Origin "*"
-      Options FollowSymLinks
-      AllowOverride None
-    </Limit>
-  </Directory>
   <Location /api>
+{% if (demo.cors.disable|default(False)) == True %}
+    Header set Access-Control-Allow-Origin "*"
+{% endif %}
+{% if (demo.user.enabled|default(False)) == True %}
+    RequestHeader set shib-shib-uid "{{ demo.user.uid|default('undefined') }}"
+    RequestHeader set shib-shib-sn "{{ demo.user.sn|default('undefined') }}"
+    RequestHeader set shib-shib-givenname "{{ demo.user.givenname|default('undefined') }}"
+    RequestHeader set shib-shib-mail "{{ demo.user.mail|default('undefined@csc.fi') }}"
+    RequestHeader set shib-shib-group "{{ demo.user.group|default('@csc.fi;undefined') }}"
+{% endif %}
     ProxyPass http://localhost:3000
     ProxyPassReverse http://localhost:3000
   </Location>
 </VirtualHost>
 
 {% if environment_id == "vagrant" %}
-  EnableSendfile Off
+EnableSendfile Off
 {% endif %}
